RESOLVED FIXED309961
[JSC] Set methods should throw TypeError when iterator next() returns non-object
https://bugs.webkit.org/show_bug.cgi?id=309961
Summary [JSC] Set methods should throw TypeError when iterator next() returns non-object
Sosuke Suzuki
Reported 2026-03-14 12:10:01 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-03-14 12:10:43 PDT
EWS
Comment 2 2026-03-15 02:14:16 PDT
Committed 309286@main (4d96716c8dc8): <https://commits.webkit.org/309286@main> Reviewed commits have been landed. Closing PR #60636 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-15 02:15:11 PDT
Note You need to log in before you can comment on or make changes to this bug.